--- a/styles/event_style4.css
+++ b/styles/event_style4.css
@@ -115,7 +115,7 @@
 }
 #event_survivor_6::after{
     background-image:url(../images_out/survivor_6_average.png);
-    content:"Visc crafts";
+    content:"Crate's force ghost leads Visc to victory";
 } 
 
 #event_survivor_7{
